main/default/objects/Integra_Contract__c/Integra_Contract__c.object-meta.xml
<CustomObject>
    <label>Integra Contract</label>
    <nameField>
        <displayFormat>IC-{000000}</displayFormat>
        <label>Integra Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integra Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>