main/default/objects/Integra_Contract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integra Contracts</relationshipLabel>
    <relationshipName>Integra_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>