main/default/objects/Integra_Contract__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_or_Related_Contract__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Master Service Agreement</fullName>
            </value>
            <value>
                <fullName>Stand-Alone</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Exhibit</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>