main/default/objects/Integra_Contract__c/fields/Assignment_by_Operations_of_Law__c.field-meta.xml
<CustomField>
    <fullName>Assignment_by_Operations_of_Law__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Assignment by Operations of Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes(30 Day Notice Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>