main/default/objects/Integra_Contract__c/fields/Assignment_Section__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Section__c</fullName>
    <label>Assignment Section</label>
    <length>200</length>
    <type>Text</type>
</CustomField>