main/default/objects/Integra_Contract__c/fields/Billing_Detail__c.field-meta.xml
<CustomField>
    <fullName>Billing_Detail__c</fullName>
    <description>Capture specifics of contract redlines specific to Billing</description>
    <inlineHelpText>Include the detail regarding categories selected in &quot;Contract Exception Categories&quot; field associated with Service Delivery. This includes: Non-Standard Billing Terms</inlineHelpText>
    <label>Billing Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>