main/default/objects/Integra_Contract__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Building_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transport Hub</fullName>
            </value>
            <value>
                <fullName>POP</fullName>
            </value>
            <value>
                <fullName>Carrier POP</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Carrier Hotel</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Switch Room</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Education/School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>