main/default/objects/Integra_Contract__c/fields/Contract_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Inactive_Reason__c</fullName>
    <inlineHelpText>If Contracts is &quot;Inactive&quot; enter the reason for inactivating.</inlineHelpText>
    <label>Contract Inactive Reason</label>
    <type>TextArea</type>
</CustomField>