main/default/objects/Integra_Contract__c/fields/Contract_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contract_Purpose__c</fullName>
    <inlineHelpText>Provide any necessary additional information to augment the &quot;Contract Subcategory&quot; selected.</inlineHelpText>
    <label>Contract Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>