main/default/objects/Integra_Contract__c/fields/CPI_Notes__c.field-meta.xml
<CustomField>
    <fullName>CPI_Notes__c</fullName>
    <inlineHelpText>Enter the section number and any specifics not previously captured regarding CPI.</inlineHelpText>
    <label>CPI Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>