main/default/objects/Integra_Contract__c/fields/CPI_Other_Rate_Escalator__c.field-meta.xml
<CustomField>
    <fullName>CPI_Other_Rate_Escalator__c</fullName>
    <label>CPI/Other Rate Escalator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>