main/default/objects/Integra_Contract__c/fields/CPI_Other_Rate_Escalator_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CPI_Other_Rate_Escalator_Frequency__c</fullName>
    <label>CPI/Other Rate Escalator Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Other - See Notes</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Upon Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>