main/default/objects/Integra_Contract__c/fields/Custom_Contract_Category__c.field-meta.xml
<CustomField>
    <fullName>Custom_Contract_Category__c</fullName>
    <description>Multi-select picklist for OM to identify redlines to contract that impact downstream teams e.g. billing, service delivery, repair, etc.</description>
    <inlineHelpText>Select all categories that apply to redlined contract</inlineHelpText>
    <label>Custom Contract Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SD - Non-Standard Reporting</fullName>
            </value>
            <value>
                <fullName>SD - Non-Standard Intervals</fullName>
            </value>
            <value>
                <fullName>SD - Non-Standard Test &amp; Acceptance</fullName>
            </value>
            <value>
                <fullName>Billing - Non-Standard Billing Terms</fullName>
            </value>
            <value>
                <fullName>Repair - Non-Standard Testing</fullName>
            </value>
            <value>
                <fullName>Repair - Non-Standard Ticket Handling</fullName>
            </value>
            <value>
                <fullName>Repair - Non-Standard Outage Notificat&#39;n</fullName>
            </value>
            <value>
                <fullName>Field - Non-Standard Building Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>