main/default/objects/Integra_Contract__c/fields/Customer_Signer__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Contact IDed as contract signer on Generate PDF Page</description>
    <label>Customer Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integra Contracts (Customer Signer)</relationshipLabel>
    <relationshipName>Integra_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>