main/default/objects/Integra_Contract__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Inside Plant</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations-Field</fullName>
            </value>
            <value>
                <fullName>Operator Services</fullName>
            </value>
            <value>
                <fullName>Outside Plant</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>