main/default/objects/Integra_Contract__c/fields/ESO__c.field-meta.xml
<CustomField>
    <fullName>ESO__c</fullName>
    <description>Engineering Service Order</description>
    <inlineHelpText>Engineering Service Order Number. Enter ESO in following format: ESO-YY-NNNN. Where YY equals current year and NNNN is ESO number.</inlineHelpText>
    <label>ESO</label>
    <length>11</length>
    <type>Text</type>
</CustomField>