main/default/objects/Integra_Contract__c/fields/Fee_Structure__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structure__c</fullName>
    <label>Fee Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>