main/default/objects/Integra_Contract__c/fields/Franchise_Agreement_Term__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Agreement_Term__c</fullName>
    <description>Term of Franchise Agreement</description>
    <inlineHelpText>Select the Term of the Franchise Agreement. If there is no Term, select &quot;No Term&quot;</inlineHelpText>
    <label>Term (years)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Term</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>