main/default/objects/Integra_Contract__c/fields/iCERT__c.field-meta.xml
<CustomField>
    <fullName>iCERT__c</fullName>
    <inlineHelpText>Enter the 6 digit iCERT number.</inlineHelpText>
    <label>iCERT</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>