main/default/objects/Integra_Contract__c/fields/If_Prohibited_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>If_Prohibited_Exceptions__c</fullName>
    <label>If Prohibited, Exceptions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Change of Control</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>No Exceptions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>