main/default/objects/Integra_Contract__c/fields/Integra_Assignment_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Integra_Assignment_Prohibited__c</fullName>
    <label>Integra Assignment Prohibited</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>