main/default/objects/Integra_Contract__c/fields/Integra_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Integra_Signed_Date__c</fullName>
    <label>Integra Signed Date</label>
    <type>Date</type>
</CustomField>