main/default/objects/Integra_Contract__c/fields/Legacy_Building_Billing_Override__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_Billing_Override__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Billing Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>