main/default/objects/Integra_Contract__c/fields/Legacy_Building_Est_on_Zayo_Ntwk_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_Est_on_Zayo_Ntwk_Date__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Estimated on Zayo Network Date</label>
    <type>Date</type>
</CustomField>