main/default/objects/Integra_Contract__c/fields/Legacy_Building_FEBC__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_FEBC__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>FEBC</label>
    <length>7</length>
    <type>Text</type>
</CustomField>