main/default/objects/Integra_Contract__c/fields/Legacy_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_Number__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Campus Building Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>