main/default/objects/Integra_Contract__c/fields/Legacy_Building_On_Net_Restricted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_On_Net_Restricted_Reason__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Restricted Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Fees</fullName>
            </value>
            <value>
                <fullName>Capped</fullName>
            </value>
            <value>
                <fullName>Dark Fiber Leased/IRU</fullName>
            </value>
            <value>
                <fullName>Degraded / Embargoed network</fullName>
            </value>
            <value>
                <fullName>End User Specific</fullName>
            </value>
            <value>
                <fullName>Limited Zayo Fiber</fullName>
            </value>
            <value>
                <fullName>Required Cross Connect Fee</fullName>
            </value>
            <value>
                <fullName>Restricted CATT LSO Bldg</fullName>
            </value>
            <value>
                <fullName>Served via Type 2 Circuit</fullName>
            </value>
            <value>
                <fullName>Zayo Amplification Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>