main/default/objects/Integra_Contract__c/fields/Legacy_Building_On_Zayo_Network_Status__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_On_Zayo_Network_Status__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>On Zayo Network Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not on Zayo Network</fullName>
            </value>
            <value>
                <fullName>Build in Progress</fullName>
            </value>
            <value>
                <fullName>On Zayo Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>