main/default/objects/Integra_Contract__c/fields/Legacy_Building_Pole_Tag_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_Pole_Tag_ID__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Pole Tag ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>