main/default/objects/Integra_Contract__c/fields/Legacy_Building_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_Street_Address__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Street Address</label>
    <length>128</length>
    <type>Text</type>
</CustomField>