main/default/objects/Integra_Contract__c/fields/Legacy_Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Building_Type__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>BT Exchange</fullName>
            </value>
            <value>
                <fullName>Cable Landing Station</fullName>
            </value>
            <value>
                <fullName>Carrier Hotel</fullName>
            </value>
            <value>
                <fullName>Carrier POP</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Cell Site</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>Conference/Convention Center</fullName>
            </value>
            <value>
                <fullName>Earth Station/Satellite Farm/Uplink Facility</fullName>
            </value>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hotel &amp; Inn</fullName>
            </value>
            <value>
                <fullName>ILA</fullName>
            </value>
            <value>
                <fullName>ILEC Central Office</fullName>
            </value>
            <value>
                <fullName>Local/State Government</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>Mobile Service Center</fullName>
            </value>
            <value>
                <fullName>Neutral Data Center</fullName>
            </value>
            <value>
                <fullName>Office - Multi Tenant</fullName>
            </value>
            <value>
                <fullName>Office - Single Tenant</fullName>
            </value>
            <value>
                <fullName>Pole</fullName>
            </value>
            <value>
                <fullName>Private Data Center</fullName>
            </value>
            <value>
                <fullName>Residential - Multi Tenant</fullName>
            </value>
            <value>
                <fullName>Retail: Lrg Shopping Mall</fullName>
            </value>
            <value>
                <fullName>Retail: Sm Shopping Mall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>