main/default/objects/Integra_Contract__c/fields/Legacy_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contract_Name__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Legacy Contract Name</label>
    <length>13</length>
    <type>Text</type>
</CustomField>