main/default/objects/Integra_Contract__c/fields/Legacy_Possible_Duplicate_Building__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Possible_Duplicate_Building__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Possible Duplicate Building</label>
    <length>6</length>
    <type>Text</type>
</CustomField>