main/default/objects/Integra_Contract__c/fields/Main_Contract__c.field-meta.xml
<CustomField>
    <fullName>Main_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contract</label>
    <referenceTo>Integra_Contract__c</referenceTo>
    <relationshipLabel>Related Integra Contracts</relationshipLabel>
    <relationshipName>Integra_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>