main/default/objects/Integra_Contract__c/fields/Main_or_Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Main_or_Related_Contract__c</fullName>
    <inlineHelpText>Select “Main” if this is an overriding contract which contains the general terms and conditions for the parties’ relationship. 
Select “Related” if this is directly related to the main contract.</inlineHelpText>
    <label>Main or Related Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>