main/default/objects/Integra_Contract__c/fields/Most_Favored_Nation__c.field-meta.xml
<CustomField>
    <fullName>Most_Favored_Nation__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Most Favored Nation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>