main/default/objects/Integra_Contract__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <label>MRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>