main/default/objects/Integra_Contract__c/fields/Non_Compete_Section__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Section__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Non-Compete Section</label>
    <length>200</length>
    <type>Text</type>
</CustomField>