main/default/objects/Integra_Contract__c/fields/Non_Solicit_Provision__c.field-meta.xml
<CustomField>
    <fullName>Non_Solicit_Provision__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Non-Solicit Provision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>