main/default/objects/Integra_Contract__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Fill in any additional pertinent information.</inlineHelpText>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>