main/default/objects/Integra_Contract__c/fields/Notice_Period_days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_days__c</fullName>
    <inlineHelpText>Enter the number of days to give advance notice.</inlineHelpText>
    <label>Notice Period (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>