main/default/objects/Integra_Contract__c/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <label>NRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>