main/default/objects/Integra_Contract__c/fields/Ordinance_Number__c.field-meta.xml
<CustomField>
    <fullName>Ordinance_Number__c</fullName>
    <description>Ordinance Number</description>
    <inlineHelpText>Enter the Ordinance Number</inlineHelpText>
    <label>Ordinance Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>