main/default/objects/Integra_Contract__c/fields/Original_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_Term__c</fullName>
    <description>Term in months</description>
    <inlineHelpText>Enter the original term length in number of months.</inlineHelpText>
    <label>Original Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>