main/default/objects/Integra_Contract__c/fields/Other_Party_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Signed_Date__c</fullName>
    <label>Other Party Signed Date</label>
    <type>Date</type>
</CustomField>