main/default/objects/Integra_Contract__c/fields/Partner_Since_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Since_Date__c</fullName>
    <label>Partner Since Date</label>
    <type>Date</type>
</CustomField>