main/default/objects/Integra_Contract__c/fields/Portability_Section__c.field-meta.xml
<CustomField>
    <fullName>Portability_Section__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Portability Section</label>
    <length>200</length>
    <type>Text</type>
</CustomField>